--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -23,7 +23,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{ secrets.DOCKERHUB_USERNAME }}/jellycorrd
+          images: ${{ secrets.DOCKERHUB_USERNAME }}/anchorr
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
