--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,38 @@
 services:
   anchorr:
-    image: nairdah/anchorr:main
+    image: nairdah/anchorr:latest
     container_name: anchorr
     restart: unless-stopped
-    env_file: .env
+    environment:
+      - WEBHOOK_PORT=8282
+      - NODE_ENV=production
     ports:
-      - "${WEBHOOK_PORT:-8282}:8282" # webhook listener
+      - "8282:8282"
+    volumes:
+      - anchorr-config:/config
+    labels:
+      - "com.example.description=Discord bot for Jellyfin media requests via Jellyseerr"
+      - "com.example.version=1.2.0"
+      - "org.opencontainers.image.title=Anchorr"
+      - "org.opencontainers.image.description=Discord bot for requesting media and Jellyfin notifications"
+      - "org.unraid.icon=https://raw.githubusercontent.com/nairdahh/anchorr/main/assets/logo.png"
+      - "webui.port=8282"
+      - "webui.protocol=http"
+    healthcheck:
+      test:
+        [
+          "CMD",
+          "wget",
+          "--quiet",
+          "--tries=1",
+          "--spider",
+          "http://127.0.0.1:8282/api/config",
+        ]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 10s
+
+volumes:
+  anchorr-config:
+    driver: local
