--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "anchorr",
-  "version": "1.0.0",
+  "version": "1.2.0",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,10 +12,8 @@
   "description": "",
   "dependencies": {
     "axios": "^1.12.2",
-    "body-parser": "^2.2.0",
     "discord.js": "^14.22.1",
-    "dotenv": "^17.2.2",
-    "express": "^5.1.0",
-    "node-fetch": "^3.3.2"
+    "express": "^4.18.2",
+    "lodash.debounce": "^4.0.8"
   }
 }
