feat: add CI/CD workflow for automated Docker image builds
- Enhanced docker-publish.yml workflow with multi-platform builds (AMD64, ARM64)
- Added support for both GitHub Container Registry (ghcr.io) and Docker Hub
- Updated docker-compose.yml to use pre-built images from GHCR
- Modified README.md with new deployment instructions for standalone usage
- Users can now deploy without cloning the repository

Closes: Enables deployment without full repository clone

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   anchorr:
-    image: nairdah/anchorr:latest
+    image: ghcr.io/nairdahh/anchorr:latest
     container_name: anchorr
     restart: unless-stopped
     environment:
