config perm fix

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       # Bind mount ensures config.json persists in a visible location
       # The directory ./anchorr-data will be created automatically by Docker
       # Change "./anchorr-data" to your preferred path
-      - ./anchorr-data:/config
+      - ./anchorr-data:/usr/src/app/config
     # Run as root to ensure write permissions (safe for localhost deployment)
     # Running as root allows Docker to create the directory automatically with correct permissions
     # For non-root: uncomment below, manually create ./anchorr-data, and set to your user/group ID
