--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,14 +1,40 @@
-name: Docker Publish
+name: Deploy to Production
 
 on:
   push:
-    branches: ["main"]
+    branches: [main]
   release:
     types: [published]
+  workflow_dispatch:
 
 jobs:
-  docker:
+  # Run tests before deployment
+  test:
     runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run security audit
+        run: npm audit --audit-level high
+
+      - name: Build test
+        run: |
+          docker build -t anchorr:test .
+
+  deploy-production:
+    runs-on: ubuntu-latest
+    needs: test
+    environment: production
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -24,6 +50,12 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: ${{ secrets.DOCKERHUB_USERNAME }}/anchorr
+          tags: |
+            type=ref,event=branch
+            type=ref,event=pr
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+            type=raw,value=latest,enable={{is_default_branch}}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
@@ -32,3 +64,15 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+
+      - name: Deploy to production
+        run: |
+          echo "🚀 Deploying to production environment"
+          echo "Image tags: ${{ steps.meta.outputs.tags }}"
+          # Add production deployment commands here
+
+      - name: Post deployment verification
+        run: |
+          echo "✅ Production deployment completed"
+          echo "Version: ${{ steps.meta.outputs.version }}"
+          echo "Tags: ${{ steps.meta.outputs.tags }}"
