--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.3.0",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
+    "dev": "nodemon app.js",
+    "create-translation": "node scripts/create-translation.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "type": "module",
