--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,17 +1,24 @@
 name: Build and Push Docker Images
 
 on:
-  push:
-    branches:
-      - main
-      - dev
-    tags:
-      - "v*"
-  pull_request:
-    branches:
-      - main
-      - dev
+  # Removed automatic triggers - now manual only
+  # push:
+  #   branches:
+  #     - main
+  #     - dev
+  #   tags:
+  #     - "v*"
+  # pull_request:
+  #   branches:
+  #     - main
+  #     - dev
   workflow_dispatch:
+    inputs:
+      push_to_registry:
+        description: 'Push to Docker Hub'
+        required: true
+        default: 'false'
+        type: boolean
 
 jobs:
   build:
@@ -32,7 +39,7 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Log in to Docker Hub
-        if: github.event_name != 'pull_request' && github.event_name != 'workflow_dispatch'
+        if: inputs.push_to_registry == true
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
@@ -51,25 +58,12 @@ jobs:
             type=sha,prefix={{branch}}-
             type=raw,value=latest,enable={{is_default_branch}}
 
-      - name: Build and push Docker image (PR)
-        if: github.event_name == 'pull_request'
+      - name: Build Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
           platforms: linux/amd64,linux/arm64,linux/arm/v7
-          push: false
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-
-      - name: Build and push Docker image (Push)
-        if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          platforms: linux/amd64,linux/arm64,linux/arm/v7
-          push: ${{ secrets.DOCKER_USERNAME != '' }}
+          push: ${{ inputs.push_to_registry }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
