--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,10 +1,18 @@
 name: Docker Publish
 
 on:
-  push:
-    branches: ["main"]
-  release:
-    types: [published]
+  # Removed automatic triggers - now manual only
+  # push:
+  #   branches: ["main"]
+  # release:
+  #   types: [published]
+  workflow_dispatch:
+    inputs:
+      push_to_registry:
+        description: 'Push to Docker Hub'
+        required: true
+        default: 'true'
+        type: boolean
 
 jobs:
   docker:
@@ -20,6 +28,7 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Log in to Docker Hub
+        if: inputs.push_to_registry == true
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
@@ -42,6 +51,6 @@ jobs:
         with:
           context: .
           platforms: linux/amd64,linux/arm64
-          push: true
+          push: ${{ inputs.push_to_registry }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
