--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,24 +1,12 @@
 name: Build and Push Docker Images
 
 on:
-  # Removed automatic triggers - now manual only
-  # push:
-  #   branches:
-  #     - main
-  #     - dev
-  #   tags:
-  #     - "v*"
-  # pull_request:
-  #   branches:
-  #     - main
-  #     - dev
+  push:
+    branches:
+      - main
+    tags:
+      - "v*"
   workflow_dispatch:
-    inputs:
-      push_to_registry:
-        description: 'Push to Docker Hub'
-        required: true
-        default: 'false'
-        type: boolean
 
 jobs:
   build:
@@ -39,7 +27,7 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Log in to Docker Hub
-        if: inputs.push_to_registry == true
+        if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/')
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
@@ -58,12 +46,12 @@ jobs:
             type=sha,prefix={{branch}}-
             type=raw,value=latest,enable={{is_default_branch}}
 
-      - name: Build Docker image
+      - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
           platforms: linux/amd64,linux/arm64,linux/arm/v7
-          push: ${{ inputs.push_to_registry }}
+          push: ${{ github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/') }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
