--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,18 +1,12 @@
 name: Docker Publish
 
 on:
-  # Removed automatic triggers - now manual only
-  # push:
-  #   branches: ["main"]
-  # release:
-  #   types: [published]
+  push:
+    branches:
+      - main
+  release:
+    types: [published]
   workflow_dispatch:
-    inputs:
-      push_to_registry:
-        description: 'Push to Docker Hub'
-        required: true
-        default: 'true'
-        type: boolean
 
 jobs:
   docker:
@@ -28,17 +22,17 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Log in to Docker Hub
-        if: inputs.push_to_registry == true
+        if: github.ref == 'refs/heads/main' || github.event_name == 'release'
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Extract metadata (tags, labels) for Docker
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{ secrets.DOCKERHUB_USERNAME }}/anchorr
+          images: ${{ secrets.DOCKER_USERNAME }}/anchorr
           tags: |
             type=ref,event=branch
             type=ref,event=pr
@@ -51,6 +45,6 @@ jobs:
         with:
           context: .
           platforms: linux/amd64,linux/arm64
-          push: ${{ inputs.push_to_registry }}
+          push: ${{ github.ref == 'refs/heads/main' || github.event_name == 'release' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
